wip fixing post alignment

--- a/client/src/components/Social.scss
+++ b/client/src/components/Social.scss
@@ -26,9 +26,10 @@
 .form__newsfeed-post {
   // background-color: #fff0f5;
   // border-radius: 20px;
-  width: 80%;
-  padding: 1em;
-  margin-bottom: 1em;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  width: 100%;
 
   .form__newsfeed-post-title {
     background-color: #fff0f5;
