--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -103,16 +103,23 @@ code {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+
   .main-content {
     width: 100%;
     margin-left: 2em;
-  }
-  .sidebar {
-    width: 40%;
-    margin-top: 6.5em;
     display: flex;
     flex-direction: column;
-    text-align: center;
+  }
+
+  .sidebar {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+
+    .sidebar__subheading {
+      font-weight: 600;
+    }
   }
 }
 
